[package]
name = "graceful-shutdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tokio-util = "0.7.9"
